[package]
name = "price-oracle"
version = "1.0.0"
authors = ["Artur Troian"]
edition = "2021"
description = "Pyth price oracle consumer contract for Akash Network"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
#backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "3.0.2"
cosmwasm-std = "3.0.2"
cw-storage-plus = "3.0.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "3.0.1"