[package]
name = "wormhole"
version = "1.0.0"
authors = ["Wormhole Contributors", "Akash Network"]
edition = "2021"
description = "Wormhole VAA verification contract for CosmWasm 3.x"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["full"]
library = []
full = []

[dependencies]
cosmwasm-schema = "3.0.2"
cosmwasm-std = "3.0.2"
cw-storage-plus = "3.0.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.10", default-features = false }
generic-array = "0.14"
hex = "0.4"

[dev-dependencies]
cw-multi-test = "3.0.1"
